--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "d3": "^5.9.1",
+    "d3-ng2-service": "^2.2.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
