--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Falcon:build"
+            "browserTarget": "Falcon:build",
+            "port": 8060
           }
         },
         "test": {
