--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3": "^5.9.1",
     "d3-ng2-service": "^2.2.0",
     "font-awesome": "^4.7.0",
+    "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
