authentication part made properly

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "d3": "^5.9.1",
     "d3-ng2-service": "^2.2.0",
     "font-awesome": "^4.7.0",
+    "ngx-mat-select-search": "^1.7.5",
     "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
